--- a/multi-repo/lambda-cdk/lambda/requirements.txt
+++ b/multi-repo/lambda-cdk/lambda/requirements.txt
@@ -8,60 +8,15 @@ aws-xray-sdk==2.14.0
     # via -r requirements.in
 botocore==1.34.145
     # via aws-xray-sdk
-contourpy==1.2.1
-    # via matplotlib
-cycler==0.12.1
-    # via matplotlib
-fonttools==4.53.1
-    # via matplotlib
-importlib-resources==6.4.0
-    # via matplotlib
 jmespath==1.0.1
     # via botocore
-kiwisolver==1.4.5
-    # via matplotlib
-matplotlib==3.9.1
-    # via
-    #   -r requirements.in
-    #   seaborn
 numpy==1.23.5
-    # via
-    #   -r requirements.in
-    #   contourpy
-    #   matplotlib
-    #   pandas
-    #   scipy
-    #   seaborn
-packaging==21.3
-    # via matplotlib
-pandas==2.2.2
-    # via
-    #   -r requirements.in
-    #   seaborn
-pillow==9.3.0
-    # via matplotlib
-pyparsing==3.0.9
-    # via
-    #   matplotlib
-    #   packaging
-python-dateutil==2.8.2
-    # via
-    #   botocore
-    #   matplotlib
-    #   pandas
-pytz==2022.6
-    # via pandas
-scipy==1.9.3
-    # via seaborn
-seaborn==0.10.1
     # via -r requirements.in
+python-dateutil==2.8.2
+    # via botocore
 six==1.16.0
     # via python-dateutil
-tzdata==2024.1
-    # via pandas
 urllib3==1.26.19
     # via botocore
 wrapt==1.16.0
     # via aws-xray-sdk
-zipp==3.19.2
-    # via importlib-resources
